[package]
name = "kerblam"
version = "0.3.0"
edition = "2021"
repository = "https://github.com/MrHedmad/kerblam"

[profile.release]
strip = true # Strip symbols from binary to make it smaller
lto = true # Link time optimizations to make binary smaller

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dependencies]
anyhow = "^1.0"
clap = { version = "^4.4", features = ["derive"] }
crossbeam-channel = "^0.5"
ctrlc = "^3.4"
env_logger = "^0.10"
filetime = "^0.2"
indicatif = "^0.17"
log = "^0.4"
rand = "^0.8"
reqwest = { version = "^0.11", features = ["blocking", "rustls-tls"] }
serde = { version = "^1.0", features = ["derive"] }
tempfile = "^3.8"
toml = "^0.8"
url = { version = "^2.5", features = ["serde"] }
version-compare = "^0.1"
walkdir = "^2.4"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.8.1"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl"]
# Publish jobs to run in CI
pr-run-mode = "plan"

[workspace.metadata.release]
publish = false
