[package]
name = "kerblam"
version = "1.0.0-rc.1"
edition = "2021"
repository = "https://github.com/MrHedmad/kerblam"
license = "MIT"
description = "A project management tool for data science and bioinformatics"
homepage = "https://github.com/MrHedmad/kerblam"
authors = ["MrHedmad <luca.visentin@unito.it>"]
readme = "README.md"
keywords = ["data-science", "execution", "container", "command"]
categories = ["command-line-utilities", "development-tools", "science", "virtualization"]
exclude = [
    "docs/", ".gitignore", ".github", ".all-contributorsrc",
    ".pre-commit-config.yaml", "trun"
]
autotests = false

[badges]
maintenance = {status = "actively-developed"}

[[test]]
name = "integration"
path = "tests/test.rs"

[profile.release]
strip = true # Strip symbols from binary to make it smaller
lto = true # Link time optimizations to make binary smaller

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dependencies]
anyhow = "^1.0"
clap = { version = "^4.4", features = ["derive"] }
crossbeam-channel = "^0.5"
ctrlc = "^3.4"
env_logger = "^0.10"
filetime = "^0.2"
flate2 = "1.0.28"
indicatif = "^0.17"
log = "^0.4"
reqwest = { version = "^0.11", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde = { version = "^1.0", features = ["derive"] }
tar = "0.4.40"
tempfile = "^3.8"
termimad = "0.29.0"
toml = "^0.8"
url = { version = "^2.5", features = ["serde"] }
version-compare = "^0.1"
walkdir = "^2.4"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.9.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl"]
# Publish jobs to run in CI
pr-run-mode = "plan"

[dev-dependencies]
chwd = "0.2.0"
git2 = "0.18.2"
paste = "1.0.14"
rusty-fork = "0.3.0"
similar = "2.4.0"
