[package]
name = "kerblam"
version = "1.2.0"
edition = "2021"
repository = "https://github.com/MrHedmad/kerblam"
license = "MIT"
description = "A project management tool for data science and bioinformatics"
homepage = "https://github.com/MrHedmad/kerblam"
authors = ["MrHedmad <luca.visentin@unito.it>"]
readme = "README.md"
keywords = ["data-science", "execution", "container", "command"]
categories = ["command-line-utilities", "development-tools", "science", "virtualization"]
exclude = [
    "docs/", ".gitignore", ".github", ".all-contributorsrc",
    ".pre-commit-config.yaml", "trun"
]
autotests = false
rust-version = "1.78"

[lib]
doctest = false

[badges]
maintenance = {status = "actively-developed"}

[[test]]
name = "integration"
path = "tests/test.rs"

[profile.release]
strip = true # Strip symbols from binary to make it smaller
lto = true # Link time optimizations to make binary smaller

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dependencies]
anyhow = "^1.0"
chrono = "0.4.38"
clap = { version = "^4.4", features = ["derive"] }
crossbeam-channel = "^0.5"
ctrlc = "^3.4"
env_logger = "^0.10"
filetime = "^0.2"
flate2 = "1.0.28"
homedir = "0.2.1"
indicatif = "^0.17"
lazy_static = "1.5.0"
log = "^0.4"
rand = "0.8.5"
reqwest = { version = "^0.11", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0.115"
tar = "0.4.40"
tempfile = "^3.8"
termimad = "^0.31"
toml = "^0.8"
url = { version = "^2.5", features = ["serde"] }
version-compare = "^0.1"
walkdir = "^2.4"


[dev-dependencies]
chwd = "0.2.0"
git2 = "0.18.2"
paste = "1.0.14"
rusty-fork = "0.3.0"
serial_test = "3.1.1"
similar = "2.4.0"
